--- a/HackIt.rc
+++ b/HackIt.rc
@@ -94,20 +94,20 @@ IDI_TOOLBAR             ICON    DISCARDABLE     "res\\ico00018.ico"
 // Dialog
 //
 
-IDD_AUTO DIALOGEX 0, 0, 267, 150
+IDD_AUTO DIALOGEX 0, 0, 267, 178
 STYLE DS_SYSMODAL | DS_MODALFRAME | DS_3DLOOK | DS_CONTEXTHELP | WS_POPUP | 
     WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_CONTEXTHELP
 CAPTION "Automatic Functions"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
-    LISTBOX         IDC_AUTOENTRIES,5,15,115,113,LBS_SORT | 
+    LISTBOX         IDC_AUTOENTRIES,5,15,115,139,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Add",IDC_ADDITEM,5,132,35,13
-    PUSHBUTTON      "Edit",IDC_EDITITEM,45,132,35,13
-    PUSHBUTTON      "Delete",IDC_DELETEITEM,85,132,35,13
+    PUSHBUTTON      "Add",IDC_ADDITEM,5,158,35,15
+    PUSHBUTTON      "Edit",IDC_EDITITEM,45,158,35,15
+    PUSHBUTTON      "Delete",IDC_DELETEITEM,85,158,35,15
     CTEXT           "Automatic Functions:",IDC_STATIC,5,5,115,10,SS_SUNKEN
-    EDITTEXT        IDC_INFOEDIT,124,15,138,130,ES_MULTILINE | 
+    EDITTEXT        IDC_INFOEDIT,124,15,138,158,ES_MULTILINE | 
                     ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | 
                     ES_WANTRETURN | NOT WS_BORDER | WS_VSCROLL | WS_HSCROLL | 
                     NOT WS_TABSTOP,WS_EX_CLIENTEDGE
@@ -115,7 +115,7 @@ BEGIN
 END
 
 IDD_AUTOENTRY DIALOG DISCARDABLE  0, 0, 272, 197
-STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_MODALFRAME | DS_CONTEXTHELP | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Add Auto Entry"
 FONT 8, "MS Sans Serif"
 BEGIN
@@ -226,7 +226,8 @@ BEGIN
 END
 
 IDD_ILLEGALWINDOWENTRY DIALOG DISCARDABLE  0, 0, 176, 190
-STYLE DS_SYSMODAL | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SYSMODAL | DS_MODALFRAME | DS_CONTEXTHELP | WS_POPUP | WS_CAPTION | 
+    WS_SYSMENU
 CAPTION "Illegal Window Entry"
 FONT 8, "MS Sans Serif"
 BEGIN
@@ -367,7 +368,7 @@ BEGIN
                     175,18
     CTEXT           "Many thanks to Kirk MacManus for beta testing, bug tracking, and moral support!",
                     IDC_STATIC,10,117,175,17
-    CTEXT           "This is v4.0 RC3 of Hack-It. Since it is a prerelease, there may still be bugs. Bug reports are requested. Hack-It v4.0 PRO is now available for purchase. $15 makes you a PRO user for life.",
+    CTEXT           "This is v4.0 of Hack-It. Bug reports are requested. Hack-It v4.0 PRO is now available for purchase. $15 makes you a PRO user for life.",
                     IDC_STATIC,10,138,175,33
     CTEXT           "Please refer to the help file or web page for information on registering Hack-It.",
                     IDC_STATIC,10,174,175,18
@@ -476,10 +477,10 @@ BEGIN
         VERTGUIDE, 124
         VERTGUIDE, 262
         TOPMARGIN, 1
-        BOTTOMMARGIN, 145
+        BOTTOMMARGIN, 173
         HORZGUIDE, 15
-        HORZGUIDE, 128
-        HORZGUIDE, 132
+        HORZGUIDE, 154
+        HORZGUIDE, 158
     END
 
     IDD_AUTOENTRY, DIALOG
