--- a/HackIt.rc
+++ b/HackIt.rc
@@ -99,7 +99,7 @@ STYLE DS_SYSMODAL | DS_MODALFRAME | DS_3DLOOK | DS_CONTEXTHELP | WS_POPUP |
     WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_CONTEXTHELP
 CAPTION "Automatic Functions"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     LISTBOX         IDC_AUTOENTRIES,5,15,115,139,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
@@ -228,7 +228,7 @@ END
 IDD_ILLEGALWINDOWENTRY DIALOG DISCARDABLE  0, 0, 176, 190
 STYLE DS_SYSMODAL | DS_MODALFRAME | DS_CONTEXTHELP | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
-CAPTION "Illegal Window Entry"
+CAPTION "Add Illegal Window Entry"
 FONT 8, "MS Sans Serif"
 BEGIN
     EDITTEXT        IDC_ILLEGALNAME,7,17,162,12,ES_AUTOHSCROLL
