added debug to .cvsignore

--- a/DeityCore/.project
+++ b/DeityCore/.project
@@ -3,6 +3,8 @@
 	<name>DeityCore</name>
 	<comment></comment>
 	<projects>
+		<project>DeityHook</project>
+		<project>DeityTools</project>
 	</projects>
 	<buildSpec>
 	</buildSpec>
