--- a/HackIt.rc
+++ b/HackIt.rc
@@ -265,10 +265,10 @@ BEGIN
                     35,15
 END
 
-IDD_SETTINGS_WINDOWS DIALOG  0, 0, 233, 170
+IDD_SETTINGS_WINDOWS DIALOGEX 0, 0, 233, 170
 STYLE DS_SETFONT | WS_POPUP | WS_CAPTION
 CAPTION "Window Control"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     GROUPBOX        "",IDC_STATIC,5,5,111,66
     CONTROL         "Custom Window Menus",IDC_SYSMENUCHECK,"Button",
@@ -285,13 +285,9 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,11,58,101,10
     CONTROL         "Refresh Window Text",IDC_REFRESHTEXT,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,125,14,85,10
-    CONTROL         "Poll for Console Windows",IDC_CONSOLEPOLL,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,125,24,96,10
-    EDITTEXT        IDC_CONSOLEPOLLINGTIME,158,34,40,12,ES_RIGHT | 
-                    ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Poll for Orphaned Items",IDC_CLEANLIST,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,125,48,89,10
-    EDITTEXT        IDC_WINDOWLISTCLEANERTIME,158,58,40,12,ES_RIGHT | 
+    CONTROL         "Poll for Stale Items",IDC_CLEANLIST,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,125,24,74,10
+    EDITTEXT        IDC_WINDOWLISTCLEANERTIME,158,34,40,12,ES_RIGHT | 
                     ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Show Children In Topmost List",IDC_TOPMOSTCHILDREN,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,5,87,111,10
@@ -307,10 +303,8 @@ BEGIN
                     121,12,SS_CENTERIMAGE
     EDITTEXT        IDC_NAMELESSTEXT,137,153,76,12,ES_AUTOHSCROLL
     GROUPBOX        "Refresh Settings",IDC_STATIC,121,5,107,70
-    LTEXT           "Refresh: ",IDC_STATIC,125,36,30,8
-    LTEXT           "Refresh:",IDC_STATIC,130,60,28,8
+    LTEXT           "Refresh:",IDC_STATIC,130,36,28,8
     LTEXT           "ms",IDC_STATIC,198,36,10,8
-    LTEXT           "ms",IDC_STATIC,201,61,10,8
     CONTROL         "Append Custom Window Menu Items",IDC_SYSMENU_APPEND,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,5,77,133,10
     CONTROL         "Use Large Icons in Window List",IDC_USELARGEICONS,
